--- a/_config.yml
+++ b/_config.yml
@@ -84,4 +84,4 @@ footer_links:
     url: https://github.com/G2Quantix
     icon: fab fa-github-square
 
-copyright: "G2 Quantix Solutions LLC | 2025"
+copyright: "G2 Quantix Solutions LLC 2025"
