--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,9 @@
 - title: Home
   url: /
 - title: Posts
-  url: /posts/
-- title: Tags
-  url: /tags/
-- title: Search
-  url: /search/
+  url: https://g2quantix.substack.com/archive
+- title: Contact
+  url: /contact/
 # - title: Categories
 #  url: /categories/
 # - title: Recipes
