--- a/_config.yml
+++ b/_config.yml
@@ -77,9 +77,9 @@ Gary:
 
 # Footer Links
 footer_links:
-  - title: Feed
-    url: atom.xml
-    icon: fas fa-rss-square
+  - title: LinkedIn
+    url: https://www.linkedin.com/company/g2quantix/
+    icon: fab fa-linkedin-square
   - title: GitHub
     url: https://github.com/G2Quantix
     icon: fab fa-github-square
