--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,6 @@
   url: /
 - title: Contact
   url: /contact/
-- title: Posts On Substack
-  url: https://g2quantix.substack.com/archive
+#- title: Posts On Substack
+#  url: https://g2quantix.substack.com/archive
 
