--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,7 @@
   url: /
 - title: Contact
   url: /contact/
+- title: QR Code
+  url: /qr-code/
 #- title: Posts On Substack
 #  url: https://g2quantix.substack.com/archive
-
